--- a/main.html
+++ b/main.html
@@ -23,5 +23,10 @@
         <p id="result" class="result">Please do not leave any blank field. </p>
     </div>
     <script src="main.js"></script>
+<div class="cent">
+         Copyright © Maitreyee Singh All Rights Reserved | <a href="https://github.com/maitreyee-xo/BMICalculator"> View Source Code </a>
+        |<a href="https://www.linkedin.com/in/maitreyee-singh/"> LinkedIn </a>|<a href="https://leetcode.com/maitreyee-xo/"> LeetCode </a>|
+        <a href="https://github.com/maitreyee-xo">GitHub</a>
+      </div>
 </body>
 </html>
